[package]
name = "frequency_analysis_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }

#Renames the executable
[[bin]]
name = "fanalysis"
path = "src/main.rs"